Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.0 Alpha
-
Windows 10/MSVC2015/64bit
-
67398f037ebf9b36b88e870998eea5918832db2c
Description
Occasionally succeeds, but mostly fails;
********* Start testing of tst_accessibility ********* Config: Using QtTest library 5.6.0, Qt 5.6.0 (x86_64-little_endian-llp64 shared (dynamic) debug build; by MSVC 2015) PASS : tst_accessibility::initTestCase() QWARN : tst_accessibility::a11y(BusyIndicator) libpng warning: iCCP: known incorrect sRGB profile FAIL! : tst_accessibility::a11y(BusyIndicator) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(Button) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(CheckBox) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(Label) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(PageIndicator) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(ProgressBar) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(RadioButton) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(RangeSlider) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(ScrollBar) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(ScrollIndicator) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(Slider) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(SpinBox) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(Switch) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(TabBar) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location QWARN : tst_accessibility::a11y(TabButton) file:///d:/dev/5-vs15-56/qt-56/qtquickcontrols2/tests/auto/accessibility/data/tabbutton.qml:11:9: QML TabButton: Binding loop detected for property "implicitWidth" FAIL! : tst_accessibility::a11y(TabButton) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(TextArea) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(TextField) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(ToolBar) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(ToolButton) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location FAIL! : tst_accessibility::a11y(Dial) '!acc' returned FALSE. () .\tst_accessibility.cpp(138) : failure location PASS : tst_accessibility::a11y(DayOfWeekRow) PASS : tst_accessibility::a11y(MonthGrid) PASS : tst_accessibility::a11y(WeekNumberColumn) PASS : tst_accessibility::cleanupTestCase() Totals: 5 passed, 20 failed, 0 skipped, 0 blacklisted ********* Finished testing of tst_accessibility *********