Fix accessibility initialization

If accessibility is already enabled at construction time, QQuickControl
does not get a notification of accessibility activation change. This
patch fixes the issue that the attached property object was not created
at all, by calling accessibilityActiveChange(true) when appropriate at
component completion.

Change-Id: I5d763d66c97a540687b217b8ae453d073f6bfdb4
Task-number: QTBUG-49361
Reviewed-by: Liang Qi <liang.qi@theqtcompany.com>