src/templates/qquickcontrol_p.h
@@ -138,6 +138,7 @@ Q_SIGNALS:
 protected:
     QQuickControl(QQuickControlPrivate &dd, QQuickItem *parent);
 
+    void componentComplete() Q_DECL_OVERRIDE;
     void itemChange(ItemChange change, const ItemChangeData &value) Q_DECL_OVERRIDE;
 
     void mousePressEvent(QMouseEvent *event) Q_DECL_OVERRIDE;
